--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@
 
     <!-- Row containing Target Number and Accumulating Total -->
     <div class="row border border-info">
-        <div id="targetNum" class="col-md-3 offset-3">
+        <div id="target" class="col-md-3 offset-3">
           Target:
         </div>
-        <div id="totalNum" class="col-md-3">
-
+        <div id="total" class="col-md-3">
+          Total:
         </div>
     </div>
 
     <!-- Row containing Color Buttons -->
     <div class="row mb-6">
                 <div id="color" class="col-md-3 bg-danger">
-                    <div class="btn btn-block bg-danger" data-id=1>
+                    <button id="color" class="btn btn-block bg-danger" data-id=1 data-value=0>
                       Red
-                    </div>       
+                    </button>       
                 </div>
                 <div id="color" class="col-md-3 bg-primary">
-                    <button class="btn btn-block bg-primary" data-id=2>
+                    <button id="color" class="btn btn-block bg-primary" data-id=2 data-value=0>
                       Blue
                     </button>  
                 </div>
                 <div id="color" class="col-md-3 bg-success">
-                    <button class="btn btn-block bg-success" data-id=3>
+                    <button id="color" class="btn btn-block bg-success" data-id=3 data-value=0>
                       Green
                     </button>  
                 </div>
                 <div id="color" class="col-md-3 bg-warning">
-                    <button class="btn btn-block bg-warning" data-id=4>
+                    <button id="color" class="btn btn-block bg-warning" data-id=4 data-value=0>
                       Yellow
                     </button>  
                 </div>
